Fix the pkg path

--- a/examples/with-thread/package.json
+++ b/examples/with-thread/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "postinstall": "cargo update && rustup component add rust-src --toolchain nightly-2021-07-29-x86_64-unknown-linux-gnu",
-    "build:wasm": "RUSTFLAGS='-C target-feature=+atomics,+bulk-memory,+mutable-globals' rustup run nightly-2021-07-29 wasm-pack build --target web --out-dir pkg-parallel -- --features parallel -Z build-std=panic_abort,std",
+    "build:wasm": "RUSTFLAGS='-C target-feature=+atomics,+bulk-memory,+mutable-globals' rustup run nightly-2021-07-29 wasm-pack build --target web --out-dir pkg -- --features parallel -Z build-std=panic_abort,std",
     "build:app": "webpack build ./index.js --mode production -o dist --output-filename index.js && cp index.html dist/ && cp serve.json dist/",
     "build": "npm run build:wasm && npm run build:app",
     "start": "cd ./dist && serve"
